<resources>
    <string name="app_name">Github User\'s Search</string>
    <string name="title">Judul</string>
    <string name="description">Description</string>
    <string name="review">Review</string>
    <string name="write_your_review_here">Write your review here..</string>
    <string name="send">Kirim</string>
    <string name="seconds">%d seconds elapsed</string>
    <string name="hello_dicoding">Hello Dicoding!</string>
    <string name="search">Search</string>
    <string name="searchbar_hint">Search users...</string>
    <string name="avatar_description">User Avatar</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="about">About</string>
    <string name="this_activity">This Activity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="login">username</string>
    <string name="id">id</string>
    <string name="follower_count">xxxx</string>
    <string name="follower_text">follower</string>
    <string name="following_count">xxxx</string>
    <string name="following_text">following</string>
    <string name="real_name">realname</string>
    <string name="Mode">Mode</string>
</resources>