<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/background_top"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/colorPrimary"
                app:layout_constraintDimensionRatio="1.2425:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"
                android:src="@drawable/aaaaa"
                app:civ_border_color="#FFF"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toBottomOf="@+id/background_top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_profile" />

            <TextView
                android:id="@+id/realname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/real_name"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/image_profile"
                app:layout_constraintEnd_toEndOf="@+id/image_profile"
                app:layout_constraintStart_toStartOf="@+id/image_profile"
                app:layout_constraintTop_toTopOf="@+id/background_top" />

            <TextView
                android:id="@+id/id_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:inputType="number"
                android:text="@string/id"
                android:textColor="@color/white"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_name"
                tools:ignore="SmallSp,TextViewEdits" />

            <TextView
                android:id="@+id/text_followers_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/follower_count"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_user" />

            <TextView
                android:id="@+id/text_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/follower_text"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/text_followers_count"
                app:layout_constraintStart_toStartOf="@+id/text_followers_count"
                app:layout_constraintTop_toBottomOf="@+id/text_followers_count" />

            <TextView
                android:id="@+id/text_following_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/following_count"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/id_user"
                app:layout_constraintTop_toBottomOf="@+id/id_user" />

            <TextView
                android:id="@+id/text_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following_text"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/text_following_count"
                app:layout_constraintStart_toStartOf="@+id/text_following_count"
                app:layout_constraintTop_toBottomOf="@+id/text_following_count" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintTop_toBottomOf="@+id/background_top"
                app:tabTextColor="@android:color/white" />
            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="35dp"
                tools:layout_editor_absoluteY="16dp" />

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/background_top"
                app:layout_constraintEnd_toEndOf="@+id/view_pager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:foregroundGravity="bottom"
                app:backgroundTint="@color/gray"
                app:fabSize="normal"
                app:layout_anchorGravity="bottom|end"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/view_pager"
                app:layout_constraintTop_toBottomOf="@+id/tabs"
                app:srcCompat="@drawable/ic_favorite_border" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>